Refactor builders in testsuite part 2
Closes #48452

Signed-off-by: stianst <stianst@gmail.com>